// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="title"
    >
      zendesk chat
    </div>
    <div
      class="splashDisplayContainer splashPadding"
    >
      <table
        class="splashTable"
      >
        <tbody>
          <tr>
            <td
              class="textContainer"
            />
            <td
              class="imageContainer"
            >
              <span
                class="container chatIcon Icon--channelChoice-chat"
                data-testid="Icon--channelChoice-chat"
                type="Icon--channelChoice-chat"
              >
                test-file-stub
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="inputContainer"
    >
      <input
        aria-invalid="false"
        class="input Input-sc-4gf5js-0 text__c-txt__input___2ZeOl kdlara"
        data-garden-id="textfields.input"
        data-garden-version="3.7.0"
        placeholder="Type your message here"
        value=""
      />
      <span
        class="container sendButton Icon--sendChat"
        data-testid="Icon--sendChat"
        type="Icon--sendChat"
      >
        test-file-stub
      </span>
    </div>
    <span
      class="container minimizeButton Icon--dash"
      data-testid="Icon--dash"
      type="Icon--dash"
    >
      test-file-stub
    </span>
  </div>
</div>
`;

exports[`with chatBadgeColor passed in 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="title"
    >
      zendesk chat
    </div>
    <div
      class="splashDisplayContainer splashPadding"
    >
      <table
        class="splashTable"
      >
        <tbody>
          <tr>
            <td
              class="textContainer"
            />
            <td
              class="imageContainer"
            >
              <span
                class="container chatIcon Icon--channelChoice-chat"
                data-testid="Icon--channelChoice-chat"
                type="Icon--channelChoice-chat"
              >
                test-file-stub
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="inputContainer"
    >
      <input
        aria-invalid="false"
        class="input Input-sc-4gf5js-0 text__c-txt__input___2ZeOl kdlara"
        data-garden-id="textfields.input"
        data-garden-version="3.7.0"
        placeholder="Type your message here"
        value=""
      />
      <span
        class="container sendButton Icon--sendChat"
        data-testid="Icon--sendChat"
        type="Icon--sendChat"
      >
        test-file-stub
      </span>
    </div>
    <span
      class="container minimizeButton Icon--dash"
      data-testid="Icon--dash"
      type="Icon--dash"
    >
      test-file-stub
    </span>
  </div>
</div>
`;

exports[`with label passed in 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="title"
    >
      zendesk chat
    </div>
    <div
      class="splashDisplayContainer splashPadding"
    >
      <table
        class="splashTable"
      >
        <tbody>
          <tr>
            <td
              class="textContainer"
            >
              wanna chat?
            </td>
            <td
              class="imageContainer"
            >
              <span
                class="container chatIcon Icon--channelChoice-chat"
                data-testid="Icon--channelChoice-chat"
                type="Icon--channelChoice-chat"
              >
                test-file-stub
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="inputContainer"
    >
      <input
        aria-invalid="false"
        class="input Input-sc-4gf5js-0 text__c-txt__input___2ZeOl kdlara"
        data-garden-id="textfields.input"
        data-garden-version="3.7.0"
        placeholder="Type your message here"
        value=""
      />
      <span
        class="container sendButton Icon--sendChat"
        data-testid="Icon--sendChat"
        type="Icon--sendChat"
      >
        test-file-stub
      </span>
    </div>
    <span
      class="container minimizeButton Icon--dash"
      data-testid="Icon--dash"
      type="Icon--dash"
    >
      test-file-stub
    </span>
  </div>
</div>
`;
